--- a/Traffic_Sign_Classifier.ipynb
+++ b/Traffic_Sign_Classifier.ipynb
@@ -33,10 +33,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 4,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Load pickled data\n",
@@ -44,9 +42,9 @@
     "\n",
     "# TODO: Fill this in based on where you saved the training and testing data\n",
     "\n",
-    "training_file = ?\n",
-    "validation_file=?\n",
-    "testing_file = ?\n",
+    "training_file = '../data/train.p'\n",
+    "validation_file='../data/valid.p'\n",
+    "testing_file = '../data/test.p'\n",
     "\n",
     "with open(training_file, mode='rb') as f:\n",
     "    train = pickle.load(f)\n",
@@ -59,6 +57,13 @@
     "X_valid, y_valid = valid['features'], valid['labels']\n",
     "X_test, y_test = test['features'], test['labels']"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -87,29 +92,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of training examples = 34799\n",
+      "Number of testing examples = 12630\n",
+      "Image data shape = (32, 32, 3)\n",
+      "Number of classes = 43\n"
+     ]
+    }
+   ],
    "source": [
     "### Replace each question mark with the appropriate value. \n",
     "### Use python, pandas or numpy methods rather than hard coding the results\n",
+    "import numpy as np\n",
     "\n",
     "# TODO: Number of training examples\n",
-    "n_train = ?\n",
+    "n_train = len(X_train)\n",
     "\n",
     "# TODO: Number of validation examples\n",
-    "n_validation = ?\n",
+    "n_validation = len(X_valid)\n",
     "\n",
     "# TODO: Number of testing examples.\n",
-    "n_test = ?\n",
+    "n_test = len(X_test)\n",
     "\n",
     "# TODO: What's the shape of an traffic sign image?\n",
-    "image_shape = ?\n",
+    "image_shape = np.shape(X_train[0])\n",
     "\n",
     "# TODO: How many unique classes/labels there are in the dataset.\n",
-    "n_classes = ?\n",
+    "n_classes = len(np.unique(y_train))\n",
     "\n",
     "print(\"Number of training examples =\", n_train)\n",
     "print(\"Number of testing examples =\", n_test)\n",
@@ -137,10 +152,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 11,
+   "metadata": {},
    "outputs": [],
    "source": [
     "### Data exploration visualization code goes here.\n",
@@ -484,7 +497,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
